--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-pdf": "^5.3.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
