--- a/package.json
+++ b/package.json
@@ -4,9 +4,6 @@
   "private": true,
   "homepage": "https://MrSamLaw.github.io/ReactPortfolio",
   "dependencies": {
-    "@fontsource/roboto": "^4.5.0",
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,8 +12,9 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-pdf": "^5.3.2",
+    "react-icons": "^4.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -44,9 +42,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@iconify-icons/simple-icons": "^1.1.33",
-    "@iconify/react": "^1.1.4"
   }
 }
